package com.example.simondicesecuenciacorrecta.datos

enum class EstadosToast(val valor: String ){
    GANASTE(valor="GANASTE. Enhorabuena!!!"),
    PERDISTE(valor="PERDISTE. Vuelve a intentarlo!!!"),
    AUXILIAR("")

}