package com.example.simondicesecuenciacorrecta.datos

import androidx.compose.runtime.mutableStateListOf

class SecuenciaJugador {
    val secuencia: MutableList<SimonColor> = mutableStateListOf()

}