package com.example.simondicesecuenciacorrecta.datos

enum class SimonColor(val value: Int) {
    Pink(1),
    Blue(2),
    Yellow(3),
    Green(4)
}